--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,27 @@
   margin-right: 4px;
   margin-bottom: 0;
 }
+
+.completed-task {
+  text-decoration: line-through;
+}
+
+.incomplete-task {
+  text-decoration: none;
+}
+.delete-button {
+  background-color: rgba(28, 33, 44, 0.9);
+  border: none;
+  border-radius: 50%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.task-item {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
